refactor tests to use method references